tests/unit/default/syntax-error/053-create-table-parens-name-colon-type-parenses-null.e.t
---- IN ----
+%table(id:decimal()?
---- OUT ----
---- ERR ----
syntax: expected `)` after `...decimal()?` instead of EOL at position 21 - at line 1
---- EXIT ----
1
